Details
-
Bug
-
Resolution: Fixed
-
Major
Description
In Live CD mode programs should not write files (save settings) on system disk without the user prompt.
How to reproduce:
- Start ReactOS Live CD
- Start mstsc and connect to RDP host
- Exit mstsc
- See this file C:\Default.rdp with the settings written by mstsc
Attachments
Issue Links
- blocks
-
CORE-13235 Review/Document/Fix hardcoded C drive letter
-
- Reopened
-